# AI-HOSPITAL-COMMAND-CENTER

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  Dockerfile.ui  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  try_summary.py
.streamlit/: config.toml
alembic/: env.py  script.py.mako
config/: settings.yaml.example
docs/: ARCHITECTURE.md  DATABASE_DESIGN.md  DATABASE_REPOSITORY.md  MODULE_MAP.md
scripts/: README.md  init_db.py  run_api.py  run_ui.py
src/hospital_command_center/: __init__.py
src/hospital_command_center/agents/: __init__.py  base.py  billing_insurance.py  followup.py  llm.py  medical_summarizer.py  router.py  structured_output.py  triage.py
src/hospital_command_center/api/: __init__.py  app.py  deps.py
src/hospital_command_center/channels/: __init__.py  base.py  mobile_app.py  web.py  whatsapp.py
src/hospital_command_center/core/: __init__.py  config.py  exceptions.py  logging.py  phone.py  validation.py
src/hospital_command_center/db/: __init__.py  base.py  session.py
src/hospital_command_center/domain/: __init__.py  billing.py  encounter.py  followup.py  intake.py  medical.py  patient.py  triage.py  workflow.py
src/hospital_command_center/graphs/: __init__.py  checkpointer.py  edges.py  nodes.py  patient_workflow.py  state.py
src/hospital_command_center/prompts/: __init__.py  billing_insurance.md  followup.md  medical_summarizer.md  router.md  triage.md
tests/: __init__.py  conftest.py
tests/integration/: test_api.py  test_workflow_graph.py
tests/unit/: test_agents.py  test_billing_insurance.py  test_billing_persistence.py  test_domain.py  test_medical_summarizer.py  test_phone.py  test_triage_clarification.py  test_triage_persistence.py
(+48 files in other folders)
