[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hospital-command-center"
version = "0.1.0"
description = "Multi-agent hospital workflow platform for patient flow, triage, and care coordination"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Hospital Command Center Team" }]
dependencies = [
    # API & server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    # Agents & orchestration
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    # Data validation & settings
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    # Persistence
    "sqlalchemy>=2.0.36",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    # UI
    "streamlit>=1.40.0",
    # HTTP & integrations
    "httpx>=0.27.0",
    # Utilities
    "python-dotenv>=1.0.1",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]
whatsapp = [
    "twilio>=9.3.0",
]

[project.scripts]
hcc-api = "hospital_command_center.api.app:main"
hcc-ui = "hospital_command_center.ui.launcher:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["hospital_command_center"]
